VG-3971: fix to make help link visible.

--- a/app/styles/components/modules/_task.scss
+++ b/app/styles/components/modules/_task.scss
@@ -23,7 +23,7 @@
 
 	a {
 		padding-right: 10px;
-		color: #ffffff;
+		color: #337AB7;
 		text-shadow: #ffffff;
 	}
 
